--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-12 21:48:28
+lastsearch = 2024-07-13 00:51:20
 
 [chieutrelanlan.com]
 match = 10.7%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -23,8 +23,8 @@ url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
 match = 7.1%%
-title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc
+title = Chiếu Trúc Hạt Mắt Trắng Quế Lâm (Mắt nhỏ Loại 1)
+url = https://shopee.vn/Chiếu-Trúc-Hạt-Mắt-Trắng-Quế-Lâm-(Mắt-nhỏ-Loại-1)-i.22156385.939014750
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Chiếu trúc Quế Lâm .1,6 ×2m
 url = https://www.lazada.vn/products/chieu-truc-que-lam-16-2m-i1517425180.html
 
 [www.facebook.com]
-match = -3.6%%
-title = Chiếu Tre Lan Lan | Updates, Reviews, Prices
-url = https://www.facebook.com/chieutruclanlan/?locale=vi_VN
+match = 20.0%%
+title = Chiếu trúc chiếu tre
+url = https://www.facebook.com/groups/chieu/
 
 [tiki.vn]
 match = -42.9%%
