--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-12 15:32:42
+lastsearch = 2024-07-13 00:52:04
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -240,4 +240,9 @@ url = https://www.medstarhealth.org/locations/medstar-washington-hospital-center
 match = -158.3%%
 title = 27 !+-- - - -- - -- -- - - - - - ~
 url = https://protectborrowers.org/wp-content/uploads/2021/06/AS-FILED-Aguocha-et-al-v-Make-School-and-Vemo-et-al-Complaint-062021.pdf
+
+[www.swhcoronaregional.com]
+match = -300.0%%
+title = Welcome to Corona Regional Medical Center | Corona, CA
+url = https://www.swhcoronaregional.com/
 
