--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-12 22:46:24
+lastsearch = 2024-07-13 00:49:50
 
 [www.instagram.com]
 match = -144.4%%
@@ -17,14 +17,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -44.4%%
+title = Nệm Giá Kho Hồng Ngự - 16 Nguyễn Huệ
+url = https://www.facebook.com/nemgiakhohongngu/
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.youtube.com]
 match = -161.1%%
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = 5.6%%
-title = Monaco Long Hair Guy
-url = https://www.tiktok.com/discover/monaco-long-hair-guy
+match = -166.7%%
+title = Nem Nướng Cô Lê - 16B ngõ 3 Ao Sen (35~70k) #tiktokfood ...
+url = https://www.tiktok.com/@eatwithmynoreo/video/7132782326672592155?lang=en
 
 [thuvienphapluat.vn]
 match = -133.3%%
