--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-13 00:17:05
+lastsearch = 2024-07-13 00:47:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -605,4 +605,9 @@ url = https://www.esd.whs.mil/Portals/54/Documents/FOID/Reading Room/Other/15-F-
 match = -13.6%%
 title = Cancer Treatment Clinical Trials
 url = https://www.mayo.edu/research/clinical-trials/tests-procedures/cancer-treatment/
+
+[www.iadb.org]
+match = 0.0%%
+title = 
+url = https://www.iadb.org/en/who-we-are/transparency/sanctions-system/sanctioned-firms-and-individuals
 
