--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-13 02:32:04
+lastsearch = 2024-07-13 02:46:55
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -121.1%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -110.5%%
+title = Chiếu trúc chiếu tre 140cm hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-140cm-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelinhchi.com]
 match = -94.7%%
@@ -112,9 +112,9 @@ title = Chiếu Trẻ Em - Công ty TNHH Sản xuất và thương mại H&T
 url = https://huongtruc.com/chi-tiet/chieu-tre-em
 
 [chieutruc.info]
-match = -68.4%%
-title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
-url = https://chieutruc.info/chieu-tam-ht/
+match = -115.8%%
+title = Giá chiếu trúc tre Việt Nam năm 2024 - Chieutruc.inFo
+url = https://chieutruc.info/gia-chieu-truc-tre-viet-nam-2024/
 
 [shoptretho.com.vn]
 match = -126.3%%
