--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-12 23:49:13
+lastsearch = 2024-07-13 02:47:49
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -32,9 +32,9 @@ title = [2 HOUR] TAM BÔI LY BIỆT REMIX || CẦN VINH x LEE KEN x ...
 url = https://www.youtube.com/watch?v=Jt_x9hRoBlo
 
 [tuyensinh247.com]
-match = -218.8%%
-title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
-url = https://tuyensinh247.com/bai-tap-62416.html
+match = -225.0%%
+title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
+url = https://tuyensinh247.com/bai-tap-18187.html
 
 [asisov.org.vn]
 match = -125.0%%
