--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-13 02:25:33
+lastsearch = 2024-07-13 02:44:30
 
 [shopee.vn]
 match = -13.8%%
@@ -32,9 +32,9 @@ title = Chiếu Nhựa Thái Lan
 url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
-match = 24.1%%
-title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
-url = https://www.sendo.vn/chieu-nhua.htm
+match = 0.0%%
+title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
+url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
