--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-12 20:48:13
+lastsearch = 2024-07-13 02:48:43
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -375,4 +375,9 @@ url = https://www.imdb.com/title/tt5109784/
 match = -135.0%%
 title = Stocks Climb As Nasdaq 100 Posts A New Record High On ...
 url = https://www.barchart.com/story/news/27189634/stocks-climb-as-nasdaq-100-posts-a-new-record-high-on-falling-bond-yields
+
+[liquipedia.net]
+match = -15.0%%
+title = Runeterra Reforged Championship
+url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 
