--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-13 01:40:10
+lastsearch = 2024-07-13 03:29:49
 
 [tiki.vn]
 match = -200.0%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam ghi tối
 url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
-match = -173.3%%
-title = Chăn Cừu Chữ Vạn Hàng Loại 1 Cao Cấp Dày 3 Lớp Siêu ...
-url = https://www.lazada.vn/products/chan-cuu-chu-van-hang-loai-1-cao-cap-day-3-lop-sieu-am-3-2-kg-2mx2m2-i2134074794.html
+match = -66.7%%
+title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
 
 [tokyolife.vn]
 match = -193.3%%
