--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-13 02:27:34
+lastsearch = 2024-07-13 03:28:20
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -67,9 +67,9 @@ title = Cây Táo Đại - 097.868.7171 - Kỹ thuật trồng cây đạt năng
 url = https://chocaygiong.com/cay-tao-dai/
 
 [nhathuoclongchau.com.vn]
-match = -32.1%%
-title = Methoxsalen: Thuốc dùng trong hóa trị liệu ánh sáng
-url = https://nhathuoclongchau.com.vn/thanh-phan/methoxsalen
+match = -14.3%%
+title = Astaxanthin: Chất chống oxy hóa từ thiên nhiên
+url = https://nhathuoclongchau.com.vn/thanh-phan/astaxanthin
 
 [www.slideshare.net]
 match = -60.7%%
