--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-12 23:21:10
+lastsearch = 2024-07-13 03:31:41
 
 [burningman.org]
 match = 0.0%%
@@ -695,4 +695,19 @@ url = https://www.federalregister.gov/agencies/national-institutes-of-health
 match = -66.7%%
 title = Patagonia Outdoor Clothing & Gear
 url = https://www.patagonia.com/home/
+
+[wayne.edu]
+match = -13.3%%
+title = Wayne State University
+url = https://wayne.edu/
+
+[www.usnews.com]
+match = 0.0%%
+title = 
+url = https://www.usnews.com/best-colleges/wayne-state-2329/applying
+
+[www.legodiscoverycenter.com]
+match = -186.7%%
+title = LEGO Discovery Center Washington, D.C. Birthday Bash
+url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego-discovery-center-washington-d-c-birthday-bash/
 
