--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-12 21:51:49
+lastsearch = 2024-07-13 03:34:16
 
 [nemgiakho.com]
 match = 8.6%%
@@ -75,4 +75,9 @@ url = https://shopee.vn/Đệm-cao-su-Liên-Á-Classic-180x200x10cm-CHÍNH-HÃNG
 match = 8.6%%
 title = Bảng Giá Nệm Cao Su Liên Á Khuyến Mãi Mới Nhất 2024
 url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
+
+[www.diepxuan.com]
+match = 65.7%%
+title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 
