--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-13 02:11:00
+lastsearch = 2024-07-13 03:32:57
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 140x190
 url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
@@ -17,14 +17,14 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -27.3%%
-title = Thảm Lông Trải Giường Giá Rẻ Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-long-trai-giuong-gia-re/
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -59.1%%
+title = Thảm trải sàn phòng khách cotton linen Nhật ...
+url = https://flexhouse.vn/tham-trai-san-phong-khach-cotton-linen-nhat-ajc002
 
 [ochino.com]
 match = -54.5%%
