--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-13 03:17:36
+lastsearch = 2024-07-13 03:49:20
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/gcam-para-samsung-a12-2024
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTYGqG0E&sig=ACfU3U3RBr3Z9wpu5ujuViI5m6GDJ_KT_A&hl=en&sa=X&ved=2ahUKEwibr42QqaKHAxV2JNAFHYZUA5EQ6AF6BAglEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTYGsF1z&sig=ACfU3U37N4A3zxh6F2-bhrC6TYXryB2vPA&hl=en&sa=X&ved=2ahUKEwjvuPebsKKHAxV-FFkFHRSUAowQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -57,9 +57,9 @@ title = Bộ 3 nồi inox 4 đáy Nagakawa NAG1306 (16cm, 20cm ...
 url = https://shop.nagakawa.com.vn/bo-3-noi-inox-4-day-nagakawa-nag1306-16cm-20cm-24cm-quai-vang.html
 
 [giaiphapchung.vn]
-match = 20.0%%
-title = Giải mã LCD i2C 1602
-url = https://giaiphapchung.vn/giai-ma-lcd-i2c-1602
+match = 11.5%%
+title = Màn hình LCD 1602 có giải mã I2C
+url = https://giaiphapchung.vn/module-lcd1602-i2c-arduino
 
 [www.diepxuan.com]
 match = 96.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=34646864
+url = https://store.steampowered.com/app/368260?l=vietnamese&snr=2_9_100006_100202_apphubheader
 
 [vi.wikipedia.org]
 match = -3.8%%
