--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-13 02:30:33
+lastsearch = 2024-07-13 03:48:57
 
 [chieutruc.info]
-match = -100.0%%
-title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
-url = https://chieutruc.info/chieu-coi-xuan-hoa/
+match = -63.6%%
+title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
+url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
 match = -36.4%%
@@ -37,9 +37,9 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -77.3%%
