--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-13 02:28:42
+lastsearch = 2024-07-13 03:52:59
 
 [agasound.vn]
 match = 6.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
@@ -72,9 +72,9 @@ title = Tổng hợp 12 mạch điện điều khiển động cơ cơ bản
 url = https://www.thietbidiencongnghiep.com.vn/bai-viet/tong-hop-12-mach-dieu-khien-co-ban/
 
 [geniustools.vn]
-match = -186.7%%
-title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
-url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
+match = -66.7%%
+title = Đầu lắc léo 3/8" hệ inch 12 cạnh
+url = http://geniustools.vn/khau-564/dau-lac-leo-3-8-he-inch-12-canh-757
 
 [dochoimamnon123.com]
 match = -240.0%%
@@ -260,4 +260,9 @@ url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2
 match = -26.7%%
 title = Danh sách tất cả cửa hàng
 url = https://www.ministop.vn/ms/all
+
+[bocongan.gov.vn]
+match = -246.7%%
+title = Phát động thi tuyển “Phương án kiến trúc cổng, tường rào ...
+url = https://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/phat-dong-thi-tuyen-phuong-an-kien-truc-cong-tuong-rao-ap-dung-trong-cong-an-nhan-dan-phu-hop-vung-mien-d2-t40106.html
 
