--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-13 03:32:23
+lastsearch = 2024-07-13 03:46:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
-url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc/
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -82,9 +82,9 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [baochinhphu.vn]
-match = -150.0%%
-title = Phát triển sắn trở thành cây trồng chủ lực quốc gia
-url = https://baochinhphu.vn/phat-trien-san-tro-thanh-cay-trong-chu-luc-quoc-gia-10224062807512415.htm
+match = -187.5%%
+title = 5 định hướng để doanh nghiệp nhà nước thúc đẩy tăng ...
+url = https://baochinhphu.vn/5-dinh-huong-de-doanh-nghiep-nha-nuoc-thuc-day-tang-truong-kinh-te-102240712185919506.htm
 
 [hoinguoicaotuoi.vn]
 match = -168.8%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvwfV04T&sig=ACfU3U2bkev2qpxj479ZGovgTJ9gSTx1Hg&hl=en&sa=X&ved=2ahUKEwjTnKK3pJyHAxXDKUQIHVkyAXIQ6AF6BAg1EAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvygU1aO&sig=ACfU3U0Ek5nUQYuFb9wi24JVDGiBjfrqFQ&hl=en&sa=X&ved=2ahUKEwjWn_7Lr6KHAxWjEVkFHWtXDncQ6AF6BAgdEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
