--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-13 02:26:08
+lastsearch = 2024-07-13 03:45:28
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,14 +12,14 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -243.8%%
-title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
+match = -268.8%%
+title = tw: cw: needles 💉🩸 kitty bites / angel bites at home pt 2! i am a ...
+url = https://www.tiktok.com/@todorokikokoroki/video/7237295177210088747
 
 [www.diepxuan.com]
-match = -150.0%%
-title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-bong.html?p=2
+match = -162.5%%
+title = Túi Warmdream 2 gấp 180x200x12 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
 
 [digitalmaine.com]
 match = -75.0%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -231.2%%
-title = Tiếp tục những cung đường... #thixagiarai #giaraiquehuongtoi
-url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
+match = -25.0%%
+title = Chăn ga gối đệm Điệp Xuân
+url = https://www.facebook.com/diepxuanco/
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
