--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-13 02:09:18
+lastsearch = 2024-07-13 04:19:47
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -27,9 +27,9 @@ title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
 url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = 17.4%%
-title = THÔNG BAO DAU GIA TAI SAN Qn 10)
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
+match = -47.8%%
+title = sO ill PHAP THAI BINH TRUNG TAM DVDG TAI sAN ...
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220310/TBNY_so_08_Hd07-2022_cua_Cuc_Quan_ly_thi_truong_tinh_Thai_Binh_ff927.pdf
 
 [www.youtube.com]
 match = 0.0%%
